--- a/pyspark/PracticeProblems/PySparkProblems.ipynb
+++ b/pyspark/PracticeProblems/PySparkProblems.ipynb
@@ -33,8 +33,7 @@
     }
    ],
    "source": [
-    "spark = SparkSession.builder.master('local[4]').appName(\n",
-    "    'PysparkDataPipeline').getOrCreate()"
+    "spark = SparkSession.builder.master('local[4]').appName('PysparkDataPipeline').getOrCreate()"
    ]
   },
   {
@@ -103,8 +102,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2 = spark.createDataFrame(\n",
-    "    [[1, 'a'], [2, 'b'], [3, 'c'], [None, 'd']], schema=schema)"
+    "df2 = spark.createDataFrame([[1, 'a'],\n",
+    "                             [2, 'b'],\n",
+    "                             [3, 'c'],\n",
+    "                             [None, 'd']], schema=schema)"
    ]
   },
   {
@@ -273,15 +274,19 @@
    "outputs": [],
    "source": [
     "from pyspark.sql.types import StructType, StructField, IntegerType, StringType\n",
-    "employees_schema = StructType([StructField(\n",
-    "    'id', IntegerType(), False), StructField('name', StringType(), True)])\n",
-    "employees_df = spark.createDataFrame([[1, 'Alice'], [7, 'Bob'], [11, 'Meir'], [\n",
-    "                                     90, 'Winston'], [3, 'Jonathan']], schema=employees_schema)\n",
+    "employees_schema = StructType([StructField('id', IntegerType(), False),\n",
+    "                               StructField('name', StringType(), True)])\n",
+    "employees_df = spark.createDataFrame([[1, 'Alice'],\n",
+    "                                      [7, 'Bob'],\n",
+    "                                      [11, 'Meir'],\n",
+    "                                      [90, 'Winston'],\n",
+    "                                      [3, 'Jonathan']], schema=employees_schema)\n",
     "\n",
-    "employee_uni_schema = StructType([StructField(\n",
-    "    'id', IntegerType(), False), StructField('unique_id', IntegerType(), True)])\n",
-    "employee_uni_df = spark.createDataFrame(\n",
-    "    [[3, 1], [11, 2], [90, 3]], schema=employee_uni_schema)"
+    "employee_uni_schema = StructType([StructField('id', IntegerType(), False),\n",
+    "                                  StructField('unique_id', IntegerType(), True)])\n",
+    "employee_uni_df = spark.createDataFrame([[3, 1],\n",
+    "                                         [11, 2],\n",
+    "                                         [90, 3]], schema=employee_uni_schema)"
    ]
   },
   {
@@ -360,8 +365,7 @@
     }
    ],
    "source": [
-    "employees_df.join(employee_uni_df, how='left', on=[\n",
-    "                  'id']).select('unique_id', 'name').show()"
+    "employees_df.join(employee_uni_df, how='left', on=['id']).select('unique_id', 'name').show()"
    ]
   },
   {
@@ -383,8 +387,7 @@
     "signups_schema = StructType([StructField('user_id', IntegerType(), False),\n",
     "                             StructField('time_stamp', TimestampType(), True)])\n",
     "confirmations_schema = StructType([StructField('user_id', IntegerType(), True),\n",
-    "                                   StructField(\n",
-    "                                       'time_stamp', TimestampType(), True),\n",
+    "                                   StructField('time_stamp', TimestampType(), True),\n",
     "                                   StructField('action', StringType(), True)])"
    ]
   },
@@ -395,10 +398,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sinups_df = spark.createDataFrame([[3, datetime.strptime('2020-03-21 10:16:13', '%Y-%m-%d %H:%M:%S')], [7, datetime.strptime('2020-01-04 13:57:59', '%Y-%m-%d %H:%M:%S')], [\n",
-    "                                  2, datetime.strptime('2020-07-29 23:09:44', '%Y-%m-%d %H:%M:%S')], [6, datetime.strptime('2020-12-09 10:39:37', '%Y-%m-%d %H:%M:%S')]], schema=signups_schema)\n",
-    "confirmations_df = spark.createDataFrame([[3, datetime.strptime('2021-01-06 03:30:46', '%Y-%m-%d %H:%M:%S'), 'timeout'], [3, datetime.strptime('2021-07-14 14:00:00', '%Y-%m-%d %H:%M:%S'), 'timeout'], [7, datetime.strptime('2021-06-12 11:57:29', '%Y-%m-%d %H:%M:%S'), 'confirmed'], [7, datetime.strptime('2021-06-13 12:58:28', '%Y-%m-%d %H:%M:%S'), 'confirmed'], [\n",
-    "                                         7, datetime.strptime('2021-06-14 13:59:27', '%Y-%m-%d %H:%M:%S'), 'confirmed'], [2, datetime.strptime('2021-01-22 00:00:00', '%Y-%m-%d %H:%M:%S'), 'confirmed'], [2, datetime.strptime('2021-02-28 23:59:59', '%Y-%m-%d %H:%M:%S'), 'timeout']], schema=confirmations_schema)"
+    "sinups_df = spark.createDataFrame([[3, datetime.strptime('2020-03-21 10:16:13', '%Y-%m-%d %H:%M:%S')],\n",
+    "                                   [7, datetime.strptime('2020-01-04 13:57:59', '%Y-%m-%d %H:%M:%S')],\n",
+    "                                   [2, datetime.strptime('2020-07-29 23:09:44', '%Y-%m-%d %H:%M:%S')],\n",
+    "                                   [6, datetime.strptime('2020-12-09 10:39:37', '%Y-%m-%d %H:%M:%S')]], schema=signups_schema)\n",
+    "confirmations_df = spark.createDataFrame([[3, datetime.strptime('2021-01-06 03:30:46', '%Y-%m-%d %H:%M:%S'), 'timeout'],\n",
+    "                                          [3, datetime.strptime('2021-07-14 14:00:00', '%Y-%m-%d %H:%M:%S'), 'timeout'],\n",
+    "                                          [7, datetime.strptime('2021-06-12 11:57:29', '%Y-%m-%d %H:%M:%S'), 'confirmed'],\n",
+    "                                          [7, datetime.strptime('2021-06-13 12:58:28', '%Y-%m-%d %H:%M:%S'), 'confirmed'],\n",
+    "                                          [7, datetime.strptime('2021-06-14 13:59:27', '%Y-%m-%d %H:%M:%S'), 'confirmed'],\n",
+    "                                          [2, datetime.strptime('2021-01-22 00:00:00', '%Y-%m-%d %H:%M:%S'), 'confirmed'],\n",
+    "                                          [2, datetime.strptime('2021-02-28 23:59:59', '%Y-%m-%d %H:%M:%S'), 'timeout']], schema=confirmations_schema)"
    ]
   },
   {
@@ -454,8 +464,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "schema = StructType([StructField('user_id', IntegerType(), False), StructField(\n",
-    "    'name', StringType(), True), StructField('mail', StringType(), True)])\n",
+    "schema = StructType([StructField('user_id', IntegerType(), False),\n",
+    "                     StructField('name', StringType(), True),\n",
+    "                     StructField('mail', StringType(), True)])\n",
     "df = spark.createDataFrame([[1, 'Winston', 'winston@leetcode.com'],\n",
     "                            [2, 'Jonathan', 'jonathanisgreat'],\n",
     "                            [3, 'Annabelle', 'bella-@leetcode.com'],\n",
@@ -537,8 +548,13 @@
    "source": [
     "schema = StructType([StructField('id', IntegerType(), False),\n",
     "                    StructField('num', StringType(), True)])\n",
-    "df = spark.createDataFrame([[1, '1'], [2, '1'], [3, '1'], [4, '2'], [\n",
-    "                           5, '1'], [6, '2'], [7, '2']], schema=schema)"
+    "df = spark.createDataFrame([[1, '1'],\n",
+    "                            [2, '1'],\n",
+    "                            [3, '1'],\n",
+    "                            [4, '2'],\n",
+    "                            [5, '1'],\n",
+    "                            [6, '2'],\n",
+    "                            [7, '2']], schema=schema)"
    ]
   },
   {
@@ -650,8 +666,14 @@
     "                    StructField('subject', StringType(), True),\n",
     "                    StructField('marks', IntegerType(), True)])\n",
     "\n",
-    "df = spark.createDataFrame([[2, 1, 1, 'maths', 10], [2, 1, 2, 'maths', 12], [2, 1, 1, 'english', 14], [2, 1, 2, 'english', 12],\n",
-    "                            [3, 2, 1, 'maths', 10], [3, 2, 2, 'maths', 12], [3, 2, 1, 'english', 16], [3, 2, 2, 'english', 14]], schema=schema)"
+    "df = spark.createDataFrame([[2, 1, 1, 'maths', 10],\n",
+    "                            [2, 1, 2, 'maths', 12],\n",
+    "                            [2, 1, 1, 'english', 14],\n",
+    "                            [2, 1, 2, 'english', 12],\n",
+    "                            [3, 2, 1, 'maths', 10],\n",
+    "                            [3, 2, 2, 'maths', 12],\n",
+    "                            [3, 2, 1, 'english', 16],\n",
+    "                            [3, 2, 2, 'english', 14]], schema=schema)"
    ]
   },
   {
@@ -769,8 +791,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = spark.createDataFrame([[2, 1, 1, 'maths', 10], [2, 1, 2, 'maths', 12], [2, 1, 1, 'english', 14], [2, 1, 2, 'english', 12],\n",
-    "                            [3, 2, 1, 'maths', 10], [3, 2, 2, 'maths', 12], [3, 2, 1, 'english', 16], [3, 2, 2, 'english', 14]], schema=schema)"
+    "df = spark.createDataFrame([[2, 1, 1, 'maths', 10],\n",
+    "                            [2, 1, 2, 'maths', 12],\n",
+    "                            [2, 1, 1, 'english', 14],\n",
+    "                            [2, 1, 2, 'english', 12],\n",
+    "                            [3, 2, 1, 'maths', 10],\n",
+    "                            [3, 2, 2, 'maths', 12],\n",
+    "                            [3, 2, 1, 'english', 16],\n",
+    "                            [3, 2, 2, 'english', 14]], schema=schema)"
    ]
   },
   {
@@ -979,7 +1007,11 @@
     "schema = StructType([StructField('id', IntegerType(), False),\n",
     "                    StructField('p_id', IntegerType(), True)])\n",
     "df = spark.createDataFrame(\n",
-    "    [[1, None], [2, 1], [3, 1], [4, 2], [5, 2]], schema=schema)"
+    "    [[1, None],\n",
+    "     [2, 1],\n",
+    "     [3, 1],\n",
+    "     [4, 2],\n",
+    "     [5, 2]], schema=schema)"
    ]
   },
   {
@@ -1258,8 +1290,11 @@
     "customer_schema = StructType([StructField('customer_id', IntegerType(), False),\n",
     "                              StructField('product_key', IntegerType(), False)])\n",
     "product_schema = StructType([StructField('product_key', IntegerType(), False)])\n",
-    "customer_df = spark.createDataFrame(\n",
-    "    [[1, 5], [2, 6], [3, 5], [3, 6], [1, 6]], schema=customer_schema)\n",
+    "customer_df = spark.createDataFrame([[1, 5],\n",
+    "                                     [2, 6],\n",
+    "                                     [3, 5],\n",
+    "                                     [3, 6],\n",
+    "                                     [1, 6]], schema=customer_schema)\n",
     "product_df = spark.createDataFrame([[5], [6]], schema=product_schema)"
    ]
   },
@@ -1378,8 +1413,7 @@
     }
    ],
    "source": [
-    "grouped_df.filter(col('count') == product_df.count()\n",
-    "                  ).select('customer_id').show()"
+    "grouped_df.filter(col('count') == product_df.count()).select('customer_id').show()"
    ]
   },
   {
@@ -1401,7 +1435,8 @@
     "schema = StructType([StructField('x', IntegerType(), False),\n",
     "                     StructField('y', IntegerType(), False),\n",
     "                     StructField('z', IntegerType(), False)])\n",
-    "df = spark.createDataFrame([[13, 15, 30], [10, 20, 15]], schema=schema)"
+    "df = spark.createDataFrame([[13, 15, 30],\n",
+    "                            [10, 20, 15]], schema=schema)"
    ]
   },
   {
@@ -1480,8 +1515,8 @@
    "source": [
     "schema = StructType([StructField('tweet_id', IntegerType(), False),\n",
     "                     StructField('content', StringType(), True)])\n",
-    "df = spark.createDataFrame(\n",
-    "    [[1, 'Vote for Biden'], [2, 'Let us make America great again!']], schema=schema)"
+    "df = spark.createDataFrame([[1, 'Vote for Biden'],\n",
+    "                            [2, 'Let us make America great again!']], schema=schema)"
    ]
   },
   {
@@ -1631,8 +1666,10 @@
     "users_schema = StructType([StructField('user_id', IntegerType(), False),\n",
     "                           StructField('join_date', StringType(), False),\n",
     "                           StructField('favorite_brand', StringType(), False)])\n",
-    "users_df = spark.createDataFrame([[1, '2018-01-01', 'Lenovo'], [2, '2018-02-09', 'Samsung'], [\n",
-    "                                 3, '2018-01-09', 'LG'], [4, '2018-05-21', 'HP']], schema=users_schema)\n",
+    "users_df = spark.createDataFrame([[1, '2018-01-01', 'Lenovo'],\n",
+    "                                  [2, '2018-02-09', 'Samsung'],\n",
+    "                                  [3, '2018-01-09', 'LG'],\n",
+    "                                  [4, '2018-05-21', 'HP']], schema=users_schema)\n",
     "\n",
     "orders_schema = StructType([StructField('order_id', IntegerType(), False),\n",
     "                            StructField('order_date', StringType(), False),\n",
