Add pyspark SQL leetcode problem

--- a/training/pyspark/PracticeProblems/PySparkProblems.ipynb
+++ b/training/pyspark/PracticeProblems/PySparkProblems.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "d0f2c3b8-3c28-441f-873d-ed019111f977",
    "metadata": {},
    "outputs": [],
@@ -24,11 +24,11 @@
      "output_type": "stream",
      "text": [
       "your 131072x1 screen size is bogus. expect trouble\n",
-      "23/08/18 01:00:35 WARN Utils: Your hostname, Pramod resolves to a loopback address: 127.0.1.1; using 172.23.91.132 instead (on interface eth0)\n",
-      "23/08/18 01:00:35 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "23/08/21 00:25:03 WARN Utils: Your hostname, Pramod resolves to a loopback address: 127.0.1.1; using 172.23.91.132 instead (on interface eth0)\n",
+      "23/08/21 00:25:03 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "23/08/18 01:00:46 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "23/08/21 00:25:14 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -2241,8 +2241,181 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "73737b1b",
+   "metadata": {},
+   "source": [
+    "#### Customer Who Visited but Did Not Make Any Transactions\n",
+    "#### https://leetcode.com/problems/customer-who-visited-but-did-not-make-any-transactions/description/?envType=study-plan-v2&envId=top-sql-50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b815c169",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "visits_schema = StructType([StructField('visit_id', IntegerType(), False),\n",
+    "                            StructField('customer_id', IntegerType(), False)])\n",
+    "visits_df = spark.createDataFrame([[1, 23],\n",
+    "                                   [2, 9],\n",
+    "                                   [4, 30],\n",
+    "                                   [5, 54],\n",
+    "                                   [6, 96],\n",
+    "                                   [7, 54],\n",
+    "                                   [8, 54]], schema=visits_schema)\n",
+    "\n",
+    "transactions_schema = StructType([StructField('transaction_id', IntegerType(), False),\n",
+    "                                  StructField('visit_id', IntegerType(), False),\n",
+    "                                  StructField('amount', IntegerType(), False)])\n",
+    "transactions_df = spark.createDataFrame([[2, 5, 310],\n",
+    "                                         [3, 5, 300],\n",
+    "                                         [9, 5, 200],\n",
+    "                                         [12, 1, 910],\n",
+    "                                         [13, 2, 970]], schema=transactions_schema)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "8bc9394f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+-----------+\n",
+      "|visit_id|customer_id|\n",
+      "+--------+-----------+\n",
+      "|       1|         23|\n",
+      "|       2|          9|\n",
+      "|       4|         30|\n",
+      "|       5|         54|\n",
+      "|       6|         96|\n",
+      "|       7|         54|\n",
+      "|       8|         54|\n",
+      "+--------+-----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "visits_df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "94d62878",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------+--------+------+\n",
+      "|transaction_id|visit_id|amount|\n",
+      "+--------------+--------+------+\n",
+      "|             2|       5|   310|\n",
+      "|             3|       5|   300|\n",
+      "|             9|       5|   200|\n",
+      "|            12|       1|   910|\n",
+      "|            13|       2|   970|\n",
+      "+--------------+--------+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "transactions_df.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5411d75",
+   "metadata": {},
+   "source": [
+    "> If transactions_df is small in size -"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "835ddd5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+--------------+\n",
+      "|customer_id|count_no_trans|\n",
+      "+-----------+--------------+\n",
+      "|         30|             1|\n",
+      "|         96|             1|\n",
+      "|         54|             2|\n",
+      "+-----------+--------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "unique_visit_ids_who_transacted = [i[0] for i in transactions_df.select('visit_id').distinct().collect()]\n",
+    "visits_df.filter(~visits_df['visit_id'].isin(unique_visit_ids_who_transacted))\\\n",
+    "    .groupBy('customer_id').count()\\\n",
+    "    .withColumnRenamed('count', 'count_no_trans').show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dcbd9021",
+   "metadata": {},
+   "source": [
+    "> If transactions_df is large to run collect(), we can use left join and picking records with null transaction_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "f6bf03c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+--------------+\n",
+      "|customer_id|count_no_trans|\n",
+      "+-----------+--------------+\n",
+      "|         54|             2|\n",
+      "|         96|             1|\n",
+      "|         30|             1|\n",
+      "+-----------+--------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "visits_df.join(transactions_df, on='visit_id', how='left')\\\n",
+    "    .filter(col('transaction_id').isNull())\\\n",
+    "    .groupBy('customer_id').agg(count('visit_id'))\\\n",
+    "    .withColumnRenamed('count(visit_id)', 'count_no_trans')\\\n",
+    "    .show()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c51e77ef",
    "metadata": {},
    "outputs": [],
    "source": []
