fixing misplaced jupyter cell

--- a/training/pyspark/PracticeProblems/PySparkProblems.ipynb
+++ b/training/pyspark/PracticeProblems/PySparkProblems.ipynb
@@ -24,16 +24,16 @@
      "output_type": "stream",
      "text": [
       "your 131072x1 screen size is bogus. expect trouble\n",
-      "23/08/21 00:25:03 WARN Utils: Your hostname, Pramod resolves to a loopback address: 127.0.1.1; using 172.23.91.132 instead (on interface eth0)\n",
-      "23/08/21 00:25:03 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "23/08/21 13:10:56 WARN Utils: Your hostname, Pramod resolves to a loopback address: 127.0.1.1; using 172.23.91.132 instead (on interface eth0)\n",
+      "23/08/21 13:10:56 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "23/08/21 00:25:14 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "23/08/21 13:11:07 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
    "source": [
-    "spark = SparkSession.builder.master('local[4]').appName('PysparkDataPipeline').getOrCreate()"
+    "spark = SparkSession.builder.master('local[*]').appName('PysparkDataPipeline').getOrCreate()"
    ]
   },
   {
