product price at a given date

--- a/training/pyspark/PracticeProblems/PySparkProblems.ipynb
+++ b/training/pyspark/PracticeProblems/PySparkProblems.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 48,
    "id": "d0f2c3b8-3c28-441f-873d-ed019111f977",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession, Window\n",
     "from pyspark.sql.types import StructType, StructField, IntegerType, StringType, BooleanType, TimestampType, DateType\n",
-    "from pyspark.sql.functions import sum, col, count, when, lead, collect_list, length, year, countDistinct, round\n",
+    "from pyspark.sql.functions import sum, col, count, when, lead, collect_list, length, year, countDistinct, round, first, lit\n",
     "from datetime import datetime"
    ]
   },
@@ -24,11 +24,11 @@
      "output_type": "stream",
      "text": [
       "your 131072x1 screen size is bogus. expect trouble\n",
-      "23/08/21 13:10:56 WARN Utils: Your hostname, Pramod resolves to a loopback address: 127.0.1.1; using 172.23.91.132 instead (on interface eth0)\n",
-      "23/08/21 13:10:56 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "23/08/24 23:10:22 WARN Utils: Your hostname, Pramod resolves to a loopback address: 127.0.1.1; using 172.23.91.132 instead (on interface eth0)\n",
+      "23/08/24 23:10:22 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "23/08/21 13:11:07 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "23/08/24 23:10:32 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -2283,13 +2283,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -2349,7 +2342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "id": "835ddd5b",
    "metadata": {},
    "outputs": [
@@ -2385,7 +2378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "id": "f6bf03c7",
    "metadata": {},
    "outputs": [
@@ -2414,8 +2407,97 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "603fd3ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Product Price at a Given Date\n",
+    "# https://leetcode.com/problems/product-price-at-a-given-date/description/\n",
+    "\n",
+    "product_schema = StructType([StructField('product_id', IntegerType(), False),\n",
+    "                            StructField('new_price', IntegerType(), True),\n",
+    "                            StructField('change_date', StringType(), True)])\n",
+    "product_df = spark.createDataFrame([[1, 20, '2019-08-14'],\n",
+    "                                    [2, 50, '2019-08-14'],\n",
+    "                                    [1, 30, '2019-08-15'],\n",
+    "                                    [1, 35, '2019-08-16'],\n",
+    "                                    [2, 65, '2019-08-17'],\n",
+    "                                    [3, 20, '2019-08-18']], schema=product_schema).select('product_id', 'new_price', col('change_date').cast('date'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f5061824",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+---------+-----------+\n",
+      "|product_id|new_price|change_date|\n",
+      "+----------+---------+-----------+\n",
+      "|         1|       20| 2019-08-14|\n",
+      "|         2|       50| 2019-08-14|\n",
+      "|         1|       30| 2019-08-15|\n",
+      "|         1|       35| 2019-08-16|\n",
+      "|         2|       65| 2019-08-17|\n",
+      "|         3|       20| 2019-08-18|\n",
+      "+----------+---------+-----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "product_df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "ee071fe3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+-----+\n",
+      "|product_id|price|\n",
+      "+----------+-----+\n",
+      "|         2|   50|\n",
+      "|         1|   35|\n",
+      "|         3|   10|\n",
+      "+----------+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql.functions import min as min_\n",
+    "## note - it is important to alias the pyspark min function since otherwise it would use python min() function and break the code\n",
+    "\n",
+    "product_df.filter(col('change_date') <= '2019-08-16')\\\n",
+    ".select('product_id', first('new_price').over(Window.partitionBy('product_id').orderBy(col('change_date').desc())).alias('price'))\\\n",
+    ".union(\n",
+    "    product_df.groupBy('product_id').agg(min_('change_date').alias('change_date'))\\\n",
+    "    .filter(col('change_date') > '2019-08-16').withColumn('price', lit(10)).select('product_id', 'price')\n",
+    ").dropDuplicates().show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "c51e77ef",
+   "id": "80ef81a4",
    "metadata": {},
    "outputs": [],
    "source": []
