changing the title of problem to markdown

--- a/training/pyspark/PracticeProblems/PySparkProblems.ipynb
+++ b/training/pyspark/PracticeProblems/PySparkProblems.ipynb
@@ -2406,15 +2406,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "86e1798a",
+   "metadata": {},
+   "source": [
+    "#### Product Price at a Given Date\n",
+    "#### https://leetcode.com/problems/product-price-at-a-given-date/description/"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "603fd3ed",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Product Price at a Given Date\n",
-    "# https://leetcode.com/problems/product-price-at-a-given-date/description/\n",
-    "\n",
     "product_schema = StructType([StructField('product_id', IntegerType(), False),\n",
     "                            StructField('new_price', IntegerType(), True),\n",
     "                            StructField('change_date', StringType(), True)])\n",
