Adding problem Immediate Food Delivery II

--- a/training/pyspark/PracticeProblems/PySparkProblems.ipynb
+++ b/training/pyspark/PracticeProblems/PySparkProblems.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "id": "d0f2c3b8-3c28-441f-873d-ed019111f977",
    "metadata": {},
    "outputs": [],
@@ -15,23 +15,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4dc3c92b-eb15-49f9-8b16-3e3939c81c12",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "your 131072x1 screen size is bogus. expect trouble\n",
-      "23/08/24 23:10:22 WARN Utils: Your hostname, Pramod resolves to a loopback address: 127.0.1.1; using 172.23.91.132 instead (on interface eth0)\n",
-      "23/08/24 23:10:22 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "23/08/24 23:10:32 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "spark = SparkSession.builder.master('local[*]').appName('PysparkDataPipeline').getOrCreate()"
    ]
@@ -2416,7 +2403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "603fd3ed",
    "metadata": {},
    "outputs": [],
@@ -2501,9 +2488,168 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3207672d",
+   "metadata": {},
+   "source": [
+    "#### Immediate Food Delivery II\n",
+    "#### https://leetcode.com/problems/immediate-food-delivery-ii/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3b2cca44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "delivery_schema = StructType([StructField('delivery_id', IntegerType(), False),\n",
+    "                              StructField('customer_id', IntegerType(), False),\n",
+    "                              StructField('order_date', StringType(), True),\n",
+    "                              StructField('customer_pref_delivery_date', StringType(), True)])\n",
+    "\n",
+    "delivery_df = spark.createDataFrame([[1, 1, '2019-08-01', '2019-08-02'],\n",
+    "                                     [2, 2, '2019-08-02', '2019-08-02'],\n",
+    "                                     [3, 1, '2019-08-11', '2019-08-12'],\n",
+    "                                     [4, 3, '2019-08-24', '2019-08-24'],\n",
+    "                                     [5, 3, '2019-08-21', '2019-08-22'],\n",
+    "                                     [6, 2, '2019-08-11', '2019-08-13'],\n",
+    "                                     [7, 4, '2019-08-09', '2019-08-09']], schema=delivery_schema)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "6a52dc6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "delivery_df = delivery_df.withColumn('order_date', col('order_date').cast('date'))\\\n",
+    "    .withColumn('customer_pref_delivery_date', col('customer_pref_delivery_date').cast('date'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "41e93745",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+-----------+----------+---------------------------+\n",
+      "|delivery_id|customer_id|order_date|customer_pref_delivery_date|\n",
+      "+-----------+-----------+----------+---------------------------+\n",
+      "|          1|          1|2019-08-01|                 2019-08-02|\n",
+      "|          2|          2|2019-08-02|                 2019-08-02|\n",
+      "|          3|          1|2019-08-11|                 2019-08-12|\n",
+      "|          4|          3|2019-08-24|                 2019-08-24|\n",
+      "|          5|          3|2019-08-21|                 2019-08-22|\n",
+      "|          6|          2|2019-08-11|                 2019-08-13|\n",
+      "|          7|          4|2019-08-09|                 2019-08-09|\n",
+      "+-----------+-----------+----------+---------------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "delivery_df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ab9e6039",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import min as min_\n",
+    "immediate_orders = delivery_df.filter(col('order_date') == col('customer_pref_delivery_date')).withColumn('immediate', lit(1))\n",
+    "first_orders = delivery_df.groupBy('customer_id').agg(min_('order_date').alias('order_date'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "677ee5e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+-----------+----------+---------------------------+---------+\n",
+      "|delivery_id|customer_id|order_date|customer_pref_delivery_date|immediate|\n",
+      "+-----------+-----------+----------+---------------------------+---------+\n",
+      "|          2|          2|2019-08-02|                 2019-08-02|        1|\n",
+      "|          4|          3|2019-08-24|                 2019-08-24|        1|\n",
+      "|          7|          4|2019-08-09|                 2019-08-09|        1|\n",
+      "+-----------+-----------+----------+---------------------------+---------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "immediate_orders.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "2fd03cbf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+----------+\n",
+      "|customer_id|order_date|\n",
+      "+-----------+----------+\n",
+      "|          1|2019-08-01|\n",
+      "|          2|2019-08-02|\n",
+      "|          3|2019-08-21|\n",
+      "|          4|2019-08-09|\n",
+      "+-----------+----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_orders.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "8321c4d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+\n",
+      "|immediate_percentage|\n",
+      "+--------------------+\n",
+      "|                50.0|\n",
+      "+--------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_orders.join(immediate_orders,\n",
+    "                  how='left',\n",
+    "                  on=['customer_id', 'order_date'])\\\n",
+    "    .select(round((sum(col('immediate')) / count('*')) * 100, 2).alias('immediate_percentage')).show()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80ef81a4",
+   "id": "e0237dff",
    "metadata": {},
    "outputs": [],
    "source": []
